--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "firebase": "^11.3.1",
+    "cloudinary-react": "^1.8.1",
+    "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
@@ -12,6 +13,7 @@
     "tailwindcss": "^3.4.1",
     "vite": "^4.5.0"
   },
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
