--- a/.env.local
+++ b/.env.local
@@ -3,4 +3,8 @@ VITE_FIREBASE_AUTH_DOMAIN=portifolioweb-f0cb0.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=portifolioweb-f0cb0
 VITE_FIREBASE_STORAGE_BUCKET=portifolioweb-f0cb0.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=582514786183
-VITE_FIREBASE_APP_ID=1:582514786183:web:f7af1757269eb6fff11d22 
+VITE_FIREBASE_APP_ID=1:582514786183:web:f7af1757269eb6fff11d22
+VITE_CLOUDINARY_CLOUD_NAME=dgtzp1ci7
+VITE_CLOUDINARY_UPLOAD_PRESET=PortifolioDb
+VITE_CLOUDINARY_API_KEY=643415825374823
+VITE_CLOUDINARY_API_SECRET=b5wqE2MhdjlYSzREMQmN2f4bSJo
