--- a/.env.local
+++ b/.env.local
@@ -1,10 +1,10 @@
-VITE_FIREBASE_API_KEY=sua-api-key
-VITE_FIREBASE_AUTH_DOMAIN=seu-auth-domain
-VITE_FIREBASE_PROJECT_ID=seu-project-id
-VITE_FIREBASE_STORAGE_BUCKET=seu-storage-bucket
-VITE_FIREBASE_MESSAGING_SENDER_ID=seu-sender-id
-VITE_FIREBASE_APP_ID=seu-app-id
-VITE_CLOUDINARY_CLOUD_NAME=seu-cloud-name
-VITE_CLOUDINARY_UPLOAD_PRESET=seu-upload-preset
-VITE_CLOUDINARY_API_KEY=643415825374823
-VITE_CLOUDINARY_API_SECRET=b5wqE2MhdjlYSzREMQmN2f4bSJo
+# Firebase
+VITE_FIREBASE_API_KEY=AIzaSyDVA06gQKUKyryw5UArB5Jpu6ycYh3e3_A
+VITE_FIREBASE_AUTH_DOMAIN=portifolioweb-f0cb0.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=portifolioweb-f0cb0
+VITE_FIREBASE_STORAGE_BUCKET=portifolioweb-f0cb0.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=582514786183
+VITE_FIREBASE_APP_ID=1:582514786183:web:f7af1757269eb6fff11d22
+
+VITE_CLOUDINARY_CLOUD_NAME=dgtzp1ci7
+VITE_CLOUDINARY_UPLOAD_PRESET=PortifolioDb
